; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_boot.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_boot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, i32, i32 }

@opt_dirty_decay_ms = common dso_local global i32 0, align 4
@opt_muzzy_decay_ms = common dso_local global i32 0, align 4
@SC_NBINS = common dso_local global i32 0, align 4
@arena_binind_div_info = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @arena_boot(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = load i32, i32* @opt_dirty_decay_ms, align 4
  %6 = call i32 @arena_dirty_decay_ms_default_set(i32 %5)
  %7 = load i32, i32* @opt_muzzy_decay_ms, align 4
  %8 = call i32 @arena_muzzy_decay_ms_default_set(i32 %7)
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %37, %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @SC_NBINS, align 4
  %12 = icmp ult i32 %10, %11
  br i1 %12, label %13, label %40

13:                                               ; preds = %9
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = load i32, i32* %3, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i64 %18
  store %struct.TYPE_4__* %19, %struct.TYPE_4__** %4, align 8
  %20 = load i32*, i32** @arena_binind_div_info, align 8
  %21 = load i32, i32* %3, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = shl i32 1, %26
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = shl i32 %30, %33
  %35 = add i32 %27, %34
  %36 = call i32 @div_init(i32* %23, i32 %35)
  br label %37

37:                                               ; preds = %13
  %38 = load i32, i32* %3, align 4
  %39 = add i32 %38, 1
  store i32 %39, i32* %3, align 4
  br label %9

40:                                               ; preds = %9
  ret void
}

declare dso_local i32 @arena_dirty_decay_ms_default_set(i32) #1

declare dso_local i32 @arena_muzzy_decay_ms_default_set(i32) #1

declare dso_local i32 @div_init(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
